--- a/css/styles.css
+++ b/css/styles.css
@@ -232,7 +232,6 @@ footer {
 
 .footer-link:hover {
     background-color: #31D0AA;
-    ;
 }
 
 .footer-description {
@@ -734,6 +733,7 @@ footer {
     font-size: 16px;
     margin: 0;
 
+    border: solid 1px transparent;
     border-radius: 4px;
     cursor: pointer;
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -757,9 +757,11 @@ footer {
 
 .form-input::placeholder {
     color: var(--background-color);
+    opacity: 0.6;
     font-size: 12px;
     letter-spacing: 0.48px;
     line-height: 2;
+    font-weight: 400;
 }
 
 .form-flex {
